src/content/bookLayout/basePage.less
@import "common-mixins.less";
@import "basePage-sharedRules.less";
@import "device.less";
@import "bubble.less";
@import (reference) "../../BloomBrowserUI/bloomUI.less"; // importing by reference only brings in the constants
// NOTE: more style sheet imports are at the end of this document,
// ones that should supersede the normal rules

@bloom-page-background: white;

.Browser-Reset() {
    /*+init {*/
    * {
        position: relative;
        margin: 0;
        padding: 0;
        font-size: 1em;
    }
    h1,
    h2,
    h3,
    h4,
    h5,
    h6,
    th {
        font-weight: inherit;
    }
    address,
    dfn,
    var {
        font-style: inherit;
    }
    caption,
    code,
    kbd,
    pre,
    samp,
    tt,
    input,
    textarea,
    select,
    button {
        font-family: inherit;
    }
    table {
        border-spacing: 0;
    }
    th {
        text-align: left;
    }
    html,
    body,
    thead,
    tbody,
    tfoot,
    tr,
    th,
    td,
    br {
        position: static;
    }
    input[type="hidden"] {
        display: none !important;
    }
    fieldset,
    a img {
        border: 0;
    }
    body {
    }
}

.Browser-Reset();

body {
    /*Most text in the document should be % changes from this value. Collection.css can then change it to make all the text  bigger.
Note: the webkit browsers (wkhtml which bloom uses for pdf, and google chrome)
Need about 2% more space to draw the same text on a ine (can't tell if the font is bigger or the box is smaller)
Therefore, in the editMode.css, we repeat this, but with a 2% larger size.
So if you change this, change it there. Note, this might not be the best long-term solution
To handling the mis-match.*/
    font-size: 10pt;
}

// When making a thumbnail for a template page, add a kind of text mockup to text areas
.bloom-templateThumbnail {
    .numberedPage:after {
        display: none;
    }
    .bloom-translationGroup {
        // Height in ems so it is sentitive to font size. The '1 transparent/3 grey' here is not necessarily
        // ideal, and was just arrived at through experimentation, balancing accuracy
        // (how many lines of text really fit in this box) with visual appeal.
        // There's often an incomplete 'line'. "To bottom" puts it at the bottom.
        // Read as: start transparent, stay transparent to 1em, switch abruptly to grey at 1em,
        // stay grey out to 4em, then repeat (which will mean an abrupt transition back to transparent).
        background: repeating-linear-gradient(
            to bottom,
            transparent,
            transparent 1em,
            grey 1em,
            grey 4em
        );
        padding: 1em 0em; // text usually doesn't go to the outermost edges.
        box-sizing: border-box;
        // Makes background respect padding. However, the pattern still BEGINS at the outermost edge;
        // hence, we put the transparent at the start, so the first 1em transparent is clipped.
        // Something more complicated may be needed to make the first line full-width if the amount of padding
        // is not equal to the gap between lines.
        background-clip: content-box;

        // Don't show any text that might be in the text block.
        color: transparent;
        // BL-6582 But do display the div, because otherwise the text mockup won't show.
        display: block;
    }
}

/* gridItem means this is a page thumbnail */
.gridItem {
    .pageOverflows {
        height: 100%;
    }
    .pageOverflowsIcon {
        background-image: url("/bloom/Attention.svg"); /* red triangle with exclamation point */
        background-position: bottom;
        background-repeat: no-repeat;
        background-size: 70%;
        z-index: 3; // Should be above split-pane-component and split-pane-divider
        height: 100%;
    }
}
div.ui-tooltip-content {
    overflow: visible !important;
    font-size: 10pt;
    padding: 0px 9px;
}
.uibloomSourceTextsBubble .ui-tooltip-content {
    /*This minimum height is for picture dictionary where the height of the target box is just one line high, not enough to show the language tabs at the top and then the content below*/
    min-height: 60px !important;
}
.bloom-imageContainer {
    min-height: 50px;
    // image containers are ordered by document order so they can NOT be a stacking context,
    // allowing their child buttons to be over the comicaljs canvas
    //z-index: 100;
}
p {
    //without this, an empty paragraph will be invisible, making blank lines impossible
    //but we also want to make sure that an empty paragraph is the same height as other lines...
    //especially since in the Edit Page (but not in Publish to Reader preview, bloom-player, etc),
    //CKEditor will insert a <br> element (making it take up the line-height) whereas without the <br>,
    //it would take up the min-height
    min-height: @defaultLineHeight;
}
textarea,
.bloom-editable {
    resize: none;
    /*don't show those cute little resize controls in Firefox 4 and greater*/
    overflow: visible;
    // this is just... bogus! removing it will cause some problems, but.. but... font-size: 143%;
    line-height: @defaultLineHeight;
    min-height: @defaultLineHeight + 0.3em;
    width: 100%;
    // We want the bloom-editables to fill the containing bloom-translationGroup,
    // so that the boxes around them give an idea of how much space is available
    // when the translationGroup has a fixed size. This pair of properties allows
    // each bloom-editable to grow proportionally to fill the space (including
    // filling it all if there is only one).
    height: auto;
    flex-grow: 1;
}
/* ... */

